--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-activityCompose = "1.10.1"
+activity = "1.12.0-alpha05"
 agp = "8.11.1"
 annotation = "1.9.1"
 appcompat = "1.7.1"
 composeBom = "2025.07.00"
-coreKtx = "1.16.0"
+core = "1.17.0-rc01"
 coreSplashScreen = "1.2.0-rc01"
-datastore = "1.1.7"
-espressoCore = "3.6.1"
-filekit = "0.10.0-beta04"
+datastore = "1.2.0-alpha02"
+espressoCore = "3.7.0"
+filekit = "0.10.0"
 hiddenapibypass = "6.1"
 junit = "4.13.2"
-junitVersion = "1.2.1"
+junitVersion = "1.3.0"
 koin = "4.1.0"
 koinAnnotations = "2.1.0"
 kotlin = "2.2.0"
@@ -20,20 +20,20 @@ kotlinxSerialization = "1.9.0"
 ksp = "2.2.0-2.0.2"
 ktfmt = "0.23.0"
 lifecycle = "2.9.1"
-material3 = "1.4.0-alpha18"
-material3Adaptive = "1.2.0-alpha09"
+material3 = "1.5.0-alpha01"
+material3Adaptive = "1.2.0-alpha10"
 materialComponents = "1.12.0"
-navigation3 = "1.0.0-alpha05"
-navigation3Lifecycle = "1.0.0-alpha03"
+navigation3 = "1.0.0-alpha06"
+navigation3Lifecycle = "1.0.0-alpha04"
 refine = "4.4.0"
 shizuku = "13.1.5"
 
 [libraries]
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashScreen" }
 androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
