--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 activity = "1.12.0-alpha06"
-agp = "8.12.0"
+agp = "8.12.1"
 annotation = "1.9.1"
 appcompat = "1.7.1"
 composeBom = "2025.08.00"
@@ -14,11 +14,11 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 koin = "4.1.0"
 koinAnnotations = "2.1.0"
-kotlin = "2.2.0"
+kotlin = "2.2.10"
 kotlinxCollectionsImmutable = "0.4.0"
 kotlinxDatetime = "0.7.1"
 kotlinxSerialization = "1.9.0"
-ksp = "2.2.0-2.0.2"
+ksp = "2.2.10-2.0.2"
 ktfmt = "0.23.0"
 lifecycle = "2.9.2"
 material3 = "1.5.0-alpha02"
@@ -26,6 +26,7 @@ material3Adaptive = "1.2.0-alpha11"
 materialComponents = "1.12.0"
 navigation3 = "1.0.0-alpha07"
 navigation3Lifecycle = "1.0.0-alpha04"
+qrose = "1.0.1"
 refine = "4.4.0"
 shizuku = "13.1.5"
 
@@ -68,6 +69,7 @@ kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime",
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 material-components = { module = "com.google.android.material:material", version.ref = "materialComponents" }
+qrose = { module = "io.github.alexzhirkevich:qrose", version.ref = "qrose" }
 refine-annotation = { group = "dev.rikka.tools.refine", name = "annotation", version.ref = "refine" }
 refine-annotation-processor = { group = "dev.rikka.tools.refine", name = "annotation-processor", version.ref = "refine" }
 refine-runtime = { group = "dev.rikka.tools.refine", name = "runtime", version.ref = "refine" }
