--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ aboutLibraries = "13.1.0"
 activity = "1.12.1"
 adaptive = "1.3.0-alpha02"
 agp = "8.13.1"
+androidxLifecycle = "2.10.0"
 annotation = "1.9.1"
 appcompat = "1.7.1"
 composeBom = "2025.12.00"
@@ -30,7 +31,7 @@ navigation3 = "1.0.0"
 qrose = "1.0.1"
 refine = "4.4.0"
 shizuku = "13.1.5"
-stabilityAnalyzer = "0.6.0"
+stabilityAnalyzer = "0.6.1"
 work = "2.11.0"
 
 [libraries]
@@ -48,6 +49,7 @@ androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscree
 androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "androidxLifecycle" }
 androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "navigation3" }
