--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
-aboutLibraries = "13.2.1"
+aboutLibraries = "14.0.0-b02"
 activity = "1.12.4"
-adaptive = "1.3.0-alpha04"
-agp = "8.13.2"
+adaptive = "1.3.0-alpha05"
+agp = "9.0.1"
 androidxLifecycle = "2.10.0"
 annotation = "1.9.1"
 appcompat = "1.7.1"
@@ -12,7 +12,7 @@ core = "1.17.0"
 coreSplashScreen = "1.2.0"
 datastore = "1.2.0"
 espressoCore = "3.7.0"
-filekit = "0.12.0"
+filekit = "0.13.0"
 hiddenapibypass = "6.1"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -27,14 +27,14 @@ ktfmt = "0.25.0"
 leakcanary = "3.0-alpha-8"
 libsu = "6.0.0"
 lifecycle = "2.10.0-alpha08"
-material3 = "1.5.0-alpha14"
+material3 = "1.5.0-alpha15"
 materialComponents = "1.13.0"
 navigation3 = "1.0.1"
 qrose = "1.1.2"
 refine = "4.4.0"
 room = "2.8.4"
 shizuku = "13.1.5"
-stabilityAnalyzer = "0.6.7"
+stabilityAnalyzer = "0.7.0"
 stub = "4.4.0"
 work = "2.11.1"
 
@@ -99,10 +99,8 @@ stub = { module = "dev.rikka.hidden:stub", version.ref = "stub" }
 
 [plugins]
 aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutLibraries" }
-aboutLibraries-android = { id = "com.mikepenz.aboutlibraries.plugin.android", version.ref = "aboutLibraries" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize",  version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
